--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>All Works html</title>
 	<link rel="stylesheet" type="text/css" href="#"/>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="file:///C|/Users/typic/Documents/Ohlone Sem/Spring '22/Advanced Mobile/week 5/styles.css">
 	
 </head>
 	<h1>(MY NAME) DESIGNS</h1>
